# hyprwall

./: Cargo.toml  hyprwall.desktop  readme.md
.github/: release.yml
man/: hyprwall.1
src/: gui.rs  main.rs
