[package]
name = "hyprwall"
version = "0.1.1"
authors = ["Nyx <nnyyxxxx@protonmail.com>"]
license = "GPL-2.0"
description = "GUI for setting wallpapers with Hyprpaper, written in blazingly fast Rust!"
repository = "https://github.com/nnyyxxxx/hyprpapergui.git"
readme = "readme.md"
keywords = [
    "gui",
    "hyprland",
    "wayland",
    "wallpaper",
]
categories = ["gui"]
edition = "2021"

[dependencies]
gtk = { version = "0.9.2", package = "gtk4", features = ["v4_8"] }
glib = { version = "0.18.0", features = ["v2_68"] }
gio = "0.18.0"
gdk = "0.18.0"
shellexpand = "3.1.0"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
rayon = "1.7"
num_cpus = "1.15"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true